# Proxyshop

./: .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTE.md  Card Creator.py  PRIVACY  Proxyshop.py  Proxyshop.spec  README.md  build.py  cli.py  config.ini  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  render_all.py  render_target.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-deploy.yml
autoproxy/: constants.py  format_text.py  frame_logic.py  helpers.py  layouts.py  render.py  scryfall.py  templates.json  templates.py  text_layers.py
changelog/: index.html
docs/: changelog.md  layouts.md  license.md  text_layers.md
docs/helpers/: actions.md  adjustments.md  bounds.md  colors.md  design.md  document.md  effects.md  expansion_symbol.md  expansionsymbol.md  layers.md  masks.md  position.md  text.md
docs/templates/: _core.md  _cosmetic.md  _vector.md  adventure.md  basic_land.md  battle.md  classes.md  leveler.md  mdfc.md  mutate.md  normal.md  planar.md  planeswalker.md  prototype.md  saga.md  split.md  token.md  transform.md
docs/temps/: _core.md  _cosmetic.md  _vector.md  adventure.md  basic_land.md  battle.md  classes.md  leveler.md  mdfc.md  mutate.md  normal.md  planar.md  planeswalker.md  prototype.md  saga.md  split.md  token.md  transform.md
docs/utils/: api.md  build.md  compression.md  decorators.md  dicts.md  download.md  env.md  exceptions.md  files.md  fonts.md  image.md  modules.md  objects.md  regex.md  scryfall.md  strings.md  testing.md
helpers/actions/: index.html
helpers/adjustments/: index.html
helpers/bounds/: index.html
helpers/colors/: index.html
helpers/design/: index.html
helpers/document/: index.html
helpers/effects/: index.html
helpers/expansion_symbol/: index.html
helpers/layers/: index.html
helpers/masks/: index.html
helpers/position/: index.html
helpers/text/: index.html
license/: index.html
photoshop/: session.py
photoshop/api/: __init__.py  _artlayer.py
plugins/: loader.py
plugins/Investigamer/: CREDITS.md  manifest.yml
plugins/MrTeferi/: README.md  manifest.json  template_map.json  templates.py
plugins/SilvanMTG/: config.ini  manifest.json  manifest.yml  template_map.json  templates.py
proxyshop/: __console__.py  __init__.py  __version__.py  app_settings.json  console.kv  constants.py  core.py  creator.kv  creator.py  env.json.dist  fonts.py  format_text.py  frame_logic.py  gdown.py  gdrive.yaml  gui.py  helpers.py  launcher.py  layouts.py  manifest.json  proxyshop.kv  render.py  scryfall.py  settings.py  symbols.json  templates.json  templates.py  tests.json  text_layers.py  update.py  utils.py
proxyshop/configs/: InventionTemplate.json
proxyshop/gui/: console.py  creator.py  dev.py  dict.py  settings.py  updater.py  utils.py
proxyshop/hooks/: hook-googleapiclient.model.py
proxyshop/kivy/: console.kv  creator.kv  dev.kv  proxyshop.kv  updater.kv
proxyshop/kv/: console.kv  creator.kv  dev.kv  proxyshop.kv  updater.kv
proxyshop/tests/: expansion_symbol.py  utility.py
search/: search_index.json
src/: __console__.py  __dev__.py  __init__.py  _config.py  _loader.py  _state.py  build.py  cards.py  console.py  constants.py  core.py  format_text.py  frame_logic.py  helpers.py  layouts.py  loader.py  render_spec.py  scryfall.py  settings.py  templates.py  text_layers.py  update.py
src/api/: amazon.py  google.py  hexproof.py  mtgjson.py  scryfall.py
src/commands/: __init__.py  build.py  docs.py  files.py  render.py  test.py
src/configs/: BasicLandClassicTemplate.json  BorderlessVectorTemplate.json  ClassicModernTemplate.json  ClassicRemasteredTemplate.json  ClassicTemplate.json  InventionTemplate.json  NormalClassicTemplate.json
src/data/: app_manifest.json  app_settings.json  app_templates.json  base_settings.json  env.default.yml  expansion_symbols.json  manifest.json  manifest.yml  symbol_routes.yml  symbols.json  symbols.yaml  symbols.yml  templates.json  templates.yaml  templates.yml  tests.json  watermarks.json  watermarks.yaml
src/enums/: adobe.py  api.py  layers.py  mtg.py  photoshop.py  settings.py
src/env/: __console__.py  __dev__.py  __init__.py  __private__.py.dist
src/gui/: __init__.py  _state.py  app.py  console.py  creator.py  dev.py  settings.py  test.py  tools.py  updater.py  utils.py
src/helpers/: __init__.py  actions.py  adjustments.py  bounds.py  colors.py  descriptors.py  design.py  document.py  effects.py  expansion_symbol.py  layers.py  masks.py  position.py  selection.py  text.py
src/kv/: console.kv  creator.kv  dev.kv  proxyshop.kv  tools.kv  updater.kv
tests/: test_frame_logic.py
text_layers/: index.html
(+142 files in other folders)
