[tool.poetry]
name = "proxyshop"
version = "v1.5.0"
description = "Photoshop automation tool for generating high quality Magic the Gathering card renders."
authors = ["MrTeferi <freethoughtleft@gmail.com>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
photoshop-python-api = "^0.21.0"
requests = "^2.28.1"
asynckivy = "^0.5.4"
Pillow = "^9.4.0"
pyclean = "^2.2.0"
kivy = {extras = ["base", "media"], version = "^2.1.0"}
typing-extensions = "^4.5.0"
pyinstaller = "5.6.2"
ratelimit = "^2.2.1"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
commitizen = "^2.39.1"
setuptools = "^67.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "1.7.0"
changelog_start_rev = 'v1.2.0'
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "src/__version__.py"
]