[tool.poetry]
name = "proxyshop"
version = "1.11.0"
description = "Photoshop automation tool for generating high quality Magic the Gathering card renders."
authors = ["MrTeferi <freethoughtleft@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/MrTeferi/Proxyshop"
repository = "https://github.com/MrTeferi/Proxyshop"
documentation = "https://github.com/MrTeferi/Proxyshop/wiki"
keywords = ["proxyshop", "proxy", "mtg", "magic", "gathering", "cards", "photoshop", "magic the gathering", "playtest"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
photoshop-python-api = "^0.22.0"
requests = "^2.28.1"
asynckivy = "^0.5.4"
Pillow = "^9.4.0"
kivy = "^2.2.0"
typing-extensions = "^4.5.0"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
pathvalidate = "^2.5.2"
fonttools = "^4.39.3"
pyyaml = "^6.0"
py7zr = "^0.20.5"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
commitizen = "^2.39.1"
setuptools = "^67.6.0"
matplotlib = "^3.7.2"
psd-tools = "^1.9.28"
pyclean = "^2.2.0"
pyinstaller = "5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "1.11.0"
changelog_start_rev = '1.2.0'
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/__version__.py"
]